# melody-memo

./: .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  supabase-schema.sql  supabase-v2-migration.sql
.github/workflows/: SIGNING.md
docs/: Karel-Barnoski-Bio.docx  Resonance-Deck.pptx  ghost-journey-spec.md  resonance-deck.md  resonance-prd.md
scripts/: check-filter.mjs  debug-share.mjs  delete-08-isolation-file.mjs  fix-builtin-shares.mjs  ghost-markers-update.mjs  ghost-markers.mjs  list-journeys.mjs  rebuild-welcome-home-culmination.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  lib.rs
src-tauri/src/audio/: fft.rs  mod.rs  playback.rs  tapped_source.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(studio)/: layout.tsx  studio-tracker.tsx
src/app/forgot-password/: page.tsx
src/components/: providers.tsx
src/lib/: logger.ts  media-session.ts  shader-preferences.ts  shader-stats.ts  tauri.ts  use-theme-colors.ts
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260217000000_add_share_token.sql  20260224000000_add_audio_loading_columns.sql  20260324000000_add_playback_seed.sql  20260407000000_featured_markers_policy.sql  20260411000000_add_profiles_and_artist.sql  20260413180000_recordings_rls_owner_only.sql  20260413200000_isolation_journey_swap.sql  20260413210000_add_journey_photo_credit_and_dedication.sql  20260417120000_hardening_constraints_indexes.sql  20260423_built_in_enrichments.sql  20260502000000_add_journey_ai_enabled.sql
(+261 files in other folders)
